# EarthRiseGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODE_STANDARDS.md  EarthRise.sln.DotSettings  EarthRise.slnx  README.md  agents.md  masterplan.md  vcpkg.json
ERHeadless/: CMakeLists.txt  ERHeadless.cpp  ERHeadless.vcxproj  ERHeadless.vcxproj.filters
ERServer/: CMakeLists.txt  ERServer.cpp  ERServer.vcxproj  ERServer.vcxproj.filters  IocpUdpListener.cpp  IocpUdpListener.h  ServerConfig.h  StatusEndpoint.h
ERServer/netio/: IocpUdpListener.cpp  IocpUdpListener.h
ERServer/persist/: AccountStore.cpp  AccountStore.h  EconomyStore.cpp  EconomyStore.h  OdbcConnection.cpp  OdbcConnection.h  OdbcConnectionPool.cpp  OdbcConnectionPool.h  PersistConfig.cpp  PersistConfig.h  PersistQueue.h  PersistenceThread.cpp  PersistenceThread.h  SimSnapshotStore.cpp  SimSnapshotStore.h  WriteBehindStore.cpp  WriteBehindStore.h
EarthRise/: App.cpp  CMakeLists.txt  DatagramSocketAdapter.cpp  DatagramSocketAdapter.h  EarthRise.vcxproj  EarthRise.vcxproj.filters  FleetCommandController.h  MenuUi.h  Package.appxmanifest  StringTable.h  TacticalHud.h  pch.h
EarthRise/Assets/Shapes/: Jumpgate.cmo
EarthRise/Assets/Shapes/Asteroids/: Asteroid01Rock.cmo  Asteroid01Rock2.dds  Asteroid01Rock3.dds  Asteroid02Rock.cmo  Asteroid02Rock3.dds  Asteroid03Rock1.dds  Asteroid04Ice.cmo  Asteroid04Ice1.dds  Asteroid05Ice.cmo  (+4 more)
NeuronAudio/: AudioEngine.cpp  AudioEngine.h  AudioTypes.h  CMakeLists.txt  Mixer.cpp  Mixer.h  NeuronAudio.cpp  NeuronAudio.vcxproj  NeuronAudio.vcxproj.filters  SpatialMath.h  Spatializer.cpp  Spatializer.h  VoiceHandle.h  VoicePool.cpp  VoicePool.h  WavParse.h  WavReader.h  pch.h
NeuronClient/: CMakeLists.txt  ClientConfig.h  FleetControl.h  HudOverlay.h  IClientController.h  Interpolator.h  NeuronClient.cpp  NeuronClient.vcxproj  NeuronClient.vcxproj.filters  Onboarding.h  Picking.h  ReconnectController.h  Replica.h  ReplicaManager.h  RtsCamera.h  ScriptedController.h  ServerStatusClient.h  Session.h  SessionImpl.h  Starmap.h
NeuronClient/control/: IClientController.h
NeuronClient/interp/: Interpolator.h
NeuronClient/replica/: Replica.h  ReplicaManager.h
NeuronClient/session/: SessionImpl.h
NeuronCore/: CMakeLists.txt  CngCrypto.cpp  CngCrypto.h  Combat.h  CombatData.h  CombatTypes.h  Command.h  Components.h  Connection.h  ConnectionTable.h  Economy.h  EconomyOutbox.h  Ecs.h  FakeCrypto.h  FixedStepAccumulator.h  Fleet.h  GameMath.h  Handshake.h  HandshakeMessages.h  ICrypto.h  ISocket.h  Interest.h  Json.h  LoopbackNetwork.h  MathCommon.h  Movement.h  Navigation.h  NeuronCore.cpp  NeuronCore.h  NeuronCore.vcxitems  NeuronCore.vcxproj  NeuronCore.vcxproj.filters  Outbox.h  PacketCodec.h  Pbkdf2.h  PersistTelemetry.h  Protocol.h  Reconnect.h  Reliability.h  ReplayWindow.h  (+19 more)
NeuronCore/ecs/: Ecs.h
NeuronCore/net/: CngCrypto.cpp  CngCrypto.h  Connection.h  FakeCrypto.h  Handshake.h  HandshakeMessages.h  ISocket.h  Protocol.h  ServerHost.h  WinsockSocket.cpp  WinsockSocket.h
NeuronCore/platform/: Allocators.h  Debug.h
NeuronCore/serde/: BitStream.h  Serde.h
NeuronCore/sim/: Command.h  Components.h  Movement.h  ServerWorld.h  SimComponents.cpp  Snapshot.h
NeuronCore/world/: WorldPos.h
NeuronRender/: CMakeLists.txt  CanvasRenderer.cpp  CanvasRenderer.h  CmoAnimation.h  CmoLoader.cpp  CmoLoader.h  CmoParse.h  DdsLoader.cpp  DdsLoader.h  DdsParse.h  DeviceResources.cpp  DeviceResources.h  FontAtlasLayout.h  MeshGpu.h  NeuronRender.cpp  NeuronRender.vcxproj  NeuronRender.vcxproj.filters  ParticleRenderer.cpp  ParticleRenderer.h  PixMarkers.h  PostProcess.cpp  PostProcess.h  SceneRenderer.cpp  SceneRenderer.h  TextureGpu.h  UiLayout.h  packages.config
NeuronRender/canvas/: CanvasRenderer.cpp
NeuronRender/gfx/: DeviceResources.cpp  DeviceResources.h
NeuronRender/scene/: SceneRenderer.cpp
NeuronRender/shaders/: BlurPS.hlsl  BrightPassPS.hlsl  CanvasPS.hlsl  CanvasVS.hlsl  CompositePS.hlsl  FullscreenVS.hlsl  Lighting.hlsli  ParticlePS.hlsl  ParticleVS.hlsl  ScenePS.hlsl  SceneTexPS.hlsl  SceneTexVS.hlsl  SceneVS.hlsl
NeuronTools/: CMakeLists.txt  CmoParse.h  DdsParse.h  README.md
NeuronTools/datacook/: .gitignore  Makefile  ToolCommon.h  UniverseSource.h  datacheck.cpp  datacook.cpp
NeuronTools/testrunner/: .gitignore  BalanceTests.cpp  CameraTests.cpp  ClientConfigTests.cpp  ClientFleetTests.cpp  CmoAnimationTests.cpp  CmoParseTests.cpp  CombatDataTests.cpp  CombatScenarioTests.cpp  CombatTests.cpp  ConnectionTableTests.cpp  DdsParseTests.cpp  DeterminismTests.cpp  EconomyOutboxTests.cpp  EconomyTests.cpp  EwarLogiTests.cpp  FittingTests.cpp  Fixtures.h  FleetTests.cpp  FontAtlasTests.cpp  HarvestTests.cpp  HudOverlayTests.cpp  InterestTests.cpp  JsonParseTests.cpp  LoadHarnessTests.cpp  Makefile  NavigationTests.cpp  OnboardingTests.cpp  OutboxTests.cpp  Pbkdf2Tests.cpp  PersistTelemetryTests.cpp  PickingTests.cpp  ProjectileTests.cpp  ReconnectControllerTests.cpp  ReconnectTests.cpp  ServerStatusTests.cpp  ShapeCatalogTests.cpp  SnapshotDeltaTests.cpp  SnapshotJobsTests.cpp  SnapshotSchedulerTests.cpp  (+24 more)
NeuronTools/testrunner/dxmath_shim/: DirectXMath.h
Testing/: CMakeLists.txt
Testing/ERHeadlessTest/: CMakeLists.txt  ERHeadlessTest.cpp  ERHeadlessTest.vcxproj  ERHeadlessTest.vcxproj.filters  pch.cpp  pch.h
Testing/ERServerTest/: CMakeLists.txt  ERServerTest.cpp  ERServerTest.vcxproj  ERServerTest.vcxproj.filters  pch.h
Testing/EarthRiseTest/: CMakeLists.txt  EarthRiseTest.cpp  EarthRiseTest.vcxproj  EarthRiseTest.vcxproj.filters
Testing/NeuronAudioTest/: CMakeLists.txt  NeuronAudioTest.cpp  NeuronAudioTest.vcxproj  NeuronAudioTest.vcxproj.filters  packages.config  pch.h
Testing/NeuronClientTest/: CMakeLists.txt  NeuronClientTest.cpp  NeuronClientTest.vcxproj  NeuronClientTest.vcxproj.filters
Testing/NeuronCoreTest/: CMakeLists.txt  NeuronCoreTest.cpp  NeuronCoreTest.vcxproj  NeuronCoreTest.vcxproj.filters  UniverseSource.h
Testing/NeuronRenderTest/: CMakeLists.txt  NeuronRenderTest.cpp  NeuronRenderTest.vcxproj  NeuronRenderTest.vcxproj.filters
(+323 files in other folders)
